test/SemanticAnalysis/Interface/InterfaceNameReference.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface TestInterface { }

export staticref<TestInterface> typename f() {
	// CHECK: .loci:8:9: error: cannot construct interface type 'TestInterface'
	return TestInterface;
}

// CHECK: 1 error generated.
